# game-animation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: gltf.frag  gltf.vert
src/: imgui-wrapper.cpp  imgui-wrapper.h  main.cpp  stb_image.cpp  types.h
